AM_CXXFLAGS = -Wall -Weffc++ -I../include

lib_LIBRARIES = libtaiju.a

libtaiju_a_SOURCES = \
	balanced-bit-vector-builder.cc \
	biased-int-vector-builder.cc \
	bit-vector-builder.cc \
	bool-vector-builder.cc \
	bp-trie-converter.cc \
	bp-trie.cc \
	const-balanced-bit-vector.cc \
	const-biased-int-vector.cc \
	const-bit-vector.cc \
	const-bool-vector.cc \
	builder-config.cc \
	dfuds-trie-converter.cc \
	dfuds-trie.cc \
	file-map.cc \
	line-reader.cc \
	lob-trie-converter.cc \
	lob-trie.cc \
	louds-trie-converter.cc \
	louds-trie.cc \
	memory-buf.cc \
	plouds-trie-converter.cc \
	plouds-trie.cc \
	pods-trie-builder.cc \
	pods-trie-converter.cc \
	pods-trie.cc \
	queue-file.cc \
	temp-file.cc \
	trie-converter-factory.cc \
	trie-factory.cc

libtaiju_a_includedir = $(includedir)/taiju
libtaiju_a_include_HEADERS = \
	../include/taiju/balanced-bit-vector-builder.h \
	../include/taiju/biased-int-vector-builder.h \
	../include/taiju/bit-vector-builder.h \
	../include/taiju/bool-vector-builder.h \
	../include/taiju/bool-vector.h \
	../include/taiju/bp-trie-converter.h \
	../include/taiju/bp-trie.h \
	../include/taiju/builder-config.h \
	../include/taiju/const-balanced-bit-vector.h \
	../include/taiju/const-biased-int-vector.h \
	../include/taiju/const-bit-vector.h \
	../include/taiju/const-bool-vector.h \
	../include/taiju/const-vector.h \
	../include/taiju/dfuds-trie-converter.h \
	../include/taiju/dfuds-trie.h \
	../include/taiju/exception.h \
	../include/taiju/file-map.h \
	../include/taiju/int-types.h \
	../include/taiju/line-reader.h \
	../include/taiju/lob-trie-converter.h \
	../include/taiju/lob-trie.h \
	../include/taiju/louds-trie-converter.h \
	../include/taiju/louds-trie.h \
	../include/taiju/mapper.h \
	../include/taiju/memory-buf.h \
	../include/taiju/plouds-trie-converter.h \
	../include/taiju/plouds-trie.h \
	../include/taiju/pods-trie-builder.h \
	../include/taiju/pods-trie-converter.h \
	../include/taiju/pods-trie.h \
	../include/taiju/queue-file.h \
	../include/taiju/reader.h \
	../include/taiju/temp-file.h \
	../include/taiju/trie-base.h \
	../include/taiju/trie-builder.h \
	../include/taiju/trie-converter-base.h \
	../include/taiju/trie-converter-factory.h \
	../include/taiju/trie-factory.h \
	../include/taiju/trie-method.h \
	../include/taiju/trie-node.h \
	../include/taiju/trie.h \
	../include/taiju/vector-builder.h \
	../include/taiju/vector.h \
	../include/taiju/writer.h
